<resources>
    <string name="app_name">WafelbakApp</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Sluiten</string>
    <string name="required">Vereist</string>
    <string name="action_sign_in">Aanmelden</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="menu">Menu</string>
    <string name="fullName">Victor Van hulle</string>
    <string name="email">vanhulle.victor@gmail.com</string>
    <string name="addOrder">Bestelling toevoegen</string>
    <string name="allOrders">Alle bestellingen weergeven</string>
    <string name="account">Account</string>
    <string name="orders">Bestellingen</string>
    <string name="nav_orders">Mijn Bestellingen</string>
    <string name="nav_edit_profile">Accountgegevens</string>
    <string name="nav_logout">Afmelden</string>
    <string name="orders_title">Mijn Bestellingen</string>
    <string name="nav_all_orders">Alle Bestellingen</string>
    <string name="all_orders_title">Alle Bestellingen</string>
    <string name="orderId">OrderID:</string>
    <string name="amountOfWaffles">Aantal wafels:</string>
    <string name="desiredDeliveryTime">Gewenste levertijd:</string>
    <string name="edit">Aanpassen</string>
    <string name="remove">Verwijderen</string>
    <string name="order">Bestelling</string>
    <string name="prompt_orderId">OrderId</string>
    <string name="prompt_comment">Voeg hier eventuele opmerkingen toe</string>
    <string name="twoWaffles">2</string>
    <string name="fourWaffles">4</string>
    <string name="sixWaffles">6</string>
    <string name="eightWaffles">8</string>
    <string name="twelveWaffles">12</string>
    <string name="twentyWaffles">20</string>
    <string name="comments">Opmerkingen:</string>
    <string name="morning">Voor 12u</string>
    <string name="midday">Tussen 13u en 16u</string>
    <string name="evening">Na 16u</string>
    <string name="idc">Het maakt niet uit</string>
    <string name="action_save">Opslaan</string>
    <string name="back">Terugkeren</string>
    <string name="order_create">Bestelling plaatsen</string>
    <string name="action_order">Plaats bestelling</string>
    <string name="name">Naam:</string>
    <string name="address">Adres:</string>
    <string name="extraField">Extra:</string>
    <string name="noOrderYet">Je hebt nog geen bestellingen.</string>
    <string name="noTotalOrdersYet">Er zijn nog geen bestellingen</string>
    <string name="search">Zoeken</string>
    <string name="nameOrAddress">Naam of Adres</string>
    <string name="myAccount">Mijn Gegevens</string>
    <string name="stats">Statestieken</string>
    <string name="noAccountYet">Nog niet geregistreerd? Druk hier!</string>
    <string name="action_register">Registreren</string>
    <string name="prompt_repeat_password">Herhaal wachtwoord</string>
    <string name="prompt_firstName">Voornaam</string>
    <string name="prompt_lastName">Familienaam</string>
    <string name="prompt_birthday">Geboortedatum JJJJ/MM/DD</string>
    <string name="prompt_street">Straatnaam</string>
    <string name="prompt_streetNumber">Huisnummer</string>
    <string name="prompt_streetExtra">Bus</string>
    <string name="prompt_postalCode">Postcode</string>
    <string name="prompt_city">Stad/Gemeente</string>
    <string name="passwordNotEqual">Wachtwoorden komen niet overeen</string>
    <string name="noEmailOrInUse">Geen geldige email Of email alreeds in gebruik</string>
    <string name="passwordNotStrongEnough">Wachtwoord is niet sterk genoeg</string>
    <string name="status">Status:</string>
    <string name="completeOrder">Bestelling voltooien</string>
    <string name="totalOrders">Totaal Aantal Bestellingen</string>
    <string name="totalWaffles">Totaal Aantal Wafels</string>
    <string name="bestStreet">Best Verkopende Straat</string>
    <string name="totalDelivered">Aantal Bestellingen Voltooid</string>
</resources>
