<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/default_vertical_margin"
    android:paddingLeft="@dimen/default_horizontal_margin"
    android:paddingRight="@dimen/default_horizontal_margin"
    android:paddingTop="@dimen/default_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:paddingTop="8dp"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:contentDescription="@string/menu"
        android:id="@+id/nav_header_image"/>

    <TextView
        android:id="@+id/nav_header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/fullName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@android:color/white" />

</LinearLayout>
</layout>