<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/order_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/orderAdminListItemHeight"
    android:padding="10dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/orderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/orderId"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderIdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="1"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/orderId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amountOfWafflesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/amountOfWaffles"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderId" />

    <TextView
        android:id="@+id/amountOfWafflesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="20"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/amountOfWafflesLabel"
        app:layout_constraintTop_toBottomOf="@id/orderIdValue" />

    <TextView
        android:id="@+id/desiredDeliveryTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/desiredDeliveryTime"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountOfWafflesLabel" />

    <TextView
        android:id="@+id/desiredDeliveryTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="Na 16u"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/desiredDeliveryTimeLabel"
        app:layout_constraintTop_toBottomOf="@id/amountOfWafflesValue" />

    <!--margin moet nog anders voor tablet, hoe?-->
    <ImageButton
        android:id="@+id/button_completeOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:contentDescription="@string/remove"
        android:src="@drawable/ic_check_green_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/desiredDeliveryTimeValue"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_removeOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:contentDescription="@string/completeOrder"
        android:src="@drawable/ic_delete_red_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_completeOrder"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desiredDeliveryTimeLabel" />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="Victor Van hulle"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/desiredDeliveryTimeValue" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/address"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/addressValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="Woestijnegoedlaan 38, 9032 Wondelgem"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/nameValue" />

    <TextView
        android:id="@+id/orderStatusField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/status"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/orderStatusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="Te Bezorgen"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/orderStatusField"
        app:layout_constraintTop_toBottomOf="@+id/addressValue" />

    <TextView
        android:id="@+id/extraField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderStatusField" />

    <TextView
        android:id="@+id/extraFieldValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/extraField"
        app:layout_constraintTop_toBottomOf="@+id/orderStatusValue" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/orderStatusValue"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
