<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/order_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/orderListItemHeight"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/orderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/orderId"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderIdValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="1"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/orderId"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amountOfWafflesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/amountOfWaffles"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderId" />

        <TextView
            android:id="@+id/amountOfWafflesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="20"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/amountOfWafflesLabel"
            app:layout_constraintTop_toBottomOf="@id/orderIdValue" />

        <TextView
            android:id="@+id/desiredDeliveryTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/desiredDeliveryTime"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amountOfWafflesLabel" />

        <TextView
            android:id="@+id/desiredDeliveryTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Na 16u"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/desiredDeliveryTimeLabel"
            app:layout_constraintTop_toBottomOf="@id/amountOfWafflesValue" />

    <!--margin moet nog anders voor tablet, hoe?-->
    <ImageButton
        android:id="@+id/button_editOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:layout_marginBottom="@dimen/default_horizontal_margin"
        android:background="@null"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_edit_orange_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amountOfWafflesValue"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
